Refines CSS, spacing issues

--- a/css/footer.scss
+++ b/css/footer.scss
@@ -3,4 +3,19 @@
 
 #footer {
 	padding: 60px 0px;
+
+	p {
+	}
+
+	#notification {
+		font-size: 12px;
+		font-weight: 600;
+	}
+
+	.divider {
+		width: 40px;
+		margin: auto;
+		margin-top: 20px;
+		margin-bottom: 30px;
+	}
 }
